--- a/sass/pages/studio/layouts/_hero.scss
+++ b/sass/pages/studio/layouts/_hero.scss
@@ -7,23 +7,23 @@
 	padding-bottom: 118px;
 	text-align: center;
 	background: #c4c4c4;
-	background-image: var(--hero-bgr-gradient), url(../../../../images/hero--mob-1x.jpg);
+	background-image: var(--hero-bgr-gradient), url(../../../../images/hero-mob.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	@include retina {
-		background-image: var(--hero-bgr-gradient), url(../../../../images/hero--mob-2x.jpg);
+		background-image: var(--hero-bgr-gradient), url(../../../../images/hero-mob2x.jpg);
 	}
 	@include mobile {
-		background-image: var(--hero-bgr-gradient), url(../../images/hero-tab.jpg);
+		background-image: var(--hero-bgr-gradient), url(../../../../images/hero-tab.jpg);
 		@include retina{
-			background-image: var(--hero-bgr-gradient), url(../../images/hero-tab2x.jpg);
+			background-image: var(--hero-bgr-gradient), url(../../../../images/hero-tab2x.jpg);
 		}
 	}
 	@include tablet {
 		background-image: var(--hero-bgr-gradient), url(../../../../images/hero.jpg);
 		@include retina{
-			background-image: var(--hero-bgr-gradient), url(../../images/hero2x.jpg);
+			background-image: var(--hero-bgr-gradient), url(../../../../images/hero2x.jpg);
 		}
 	}
 	@include desktop{
