--- a/css/main.css
+++ b/css/main.css
@@ -836,34 +836,34 @@ body {
   padding-bottom: 118px;
   text-align: center;
   background: #c4c4c4;
-  background-image: var(--hero-bgr-gradient), url(../../../../images/hero-mob.jpg);
+  background-image: var(--hero-bgr-gradient), url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-bgr-gradient), url(../../../../images/hero-mob2x.jpg);
+    background-image: var(--hero-bgr-gradient), url(../images/hero-mob2x.jpg);
   }
 }
 @media screen and (min-width: 480px) {
   .hero {
-    background-image: var(--hero-bgr-gradient), url(../../../../images/hero-tab.jpg);
+    background-image: var(--hero-bgr-gradient), url(../images/hero-tab.jpg);
   }
 }
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-bgr-gradient), url(../../../../images/hero-tab2x.jpg);
+    background-image: var(--hero-bgr-gradient), url(../images/hero-tab2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: var(--hero-bgr-gradient), url(../../../../images/hero.jpg);
+    background-image: var(--hero-bgr-gradient), url(../images/hero.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-bgr-gradient), url(../../../../images/hero2x.jpg);
+    background-image: var(--hero-bgr-gradient), url(../images/hero2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
